force-app/main/default/objects/Log__c/Log__c.object-meta.xml
<CustomObject>
    <description>Object to hold error or information log, generated from various scenarios, apex code, trigger, javascript and so forth.

The Apex Class “LogUtility” is used to log records in this object.</description>
    <label>Log</label>
    <nameField>
        <displayFormat>Log-{00000}</displayFormat>
        <label>Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>