force-app/main/default/objects/Log__c/fields/IsException__c.field-meta.xml
<CustomField>
    <fullName>IsException__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if log is an exception or a notification log, check true if it is an exception/error.</description>
    <inlineHelpText>Check if log is an exception or a notification log, check true if it is an exception/error.</inlineHelpText>
    <label>IsException</label>
    <type>Checkbox</type>
</CustomField>