force-app/main/default/objects/Log__c/fields/Long_Description__c.field-meta.xml
<CustomField>
    <fullName>Long_Description__c</fullName>
    <description>Log long description or message</description>
    <inlineHelpText>Log long description or message</inlineHelpText>
    <label>Long Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>