force-app/main/default/objects/Log__c/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <description>Class, Trigger or any point that generate the log.</description>
    <inlineHelpText>Class, Trigger or any point that generate the log.</inlineHelpText>
    <label>Origin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>