force-app/main/default/objects/Log__c/fields/Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Record_ID__c</fullName>
    <description>Record ID related with the log</description>
    <inlineHelpText>Record ID related with the log</inlineHelpText>
    <label>Record ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>